Adicionando validações e melhorando retornos